@@ -1,6 +1,6 @@
 package graph;
 
-import java.util.List;
+import java.util.*;
 
 /**
  * https://leetcode.com/problems/all-paths-from-source-to-target/
@@ -13,8 +13,44 @@ import java.util.List;
  */
 public class AllPathsFromSourceTarget {
 
+
+    // O(E + k * V) time | O(N) space - where k number of paths
     public static List<List<Integer>> allPathsSourceTarget(int[][] graph) {
-        return List.of(List.of(0, 1, 3), List.of(0, 2, 3));
+        if (graph == null || graph.length == 0) return Collections.emptyList();
+
+        int start = 0;
+        Deque<AllPathsFromSourceTarget1.Pair> stack = new LinkedList<>();
+        stack.push(new AllPathsFromSourceTarget1.Pair(start, List.of(start)));
+
+        List<List<Integer>> res = new ArrayList<>();
+
+        while (!stack.isEmpty()) {
+            AllPathsFromSourceTarget1.Pair p = stack.pop();
+            int v = p.node;
+            List<Integer> path = p.lst;
+
+            if (v == graph.length - 1) {
+                res.add(new ArrayList<>(path));
+            }
+
+            for (int u : graph[v]) {
+                List<Integer> np = new ArrayList<>(path);
+                np.add(u);
+                stack.push(new AllPathsFromSourceTarget1.Pair(u, np));
+            }
+        }
+
+        return res;
+    }
+
+    static class Pair {
+        int node;
+        List<Integer> lst;
+
+        public Pair(int node, List<Integer> lst) {
+            this.node = node;
+            this.lst = lst;
+        }
     }
 
     public static void main(String[] args) {
